# cli-spotify-ai

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
app/core/: config.py
app/domain/entities/: __init__.py  playlist.py  recommendation.py  track.py  user.py
app/domain/repositories/: __init__.py  lyrics_repository.py  spotify_repository.py  user_repository.py
app/domain/services/: __init__.py  basic_similarity_recommendation_service.py  euclidean_scoring_strategy.py  recommendation_service.py  track_scoring_strategy.py
app/domain/value_objects/: __init__.py  mood_profile.py  recommendation_score.py  spotify_token.py  track_features.py
app/infrastructure/: database.py
docker/: docker-compose.yml
tests/integration/: test_database_connection.py
tests/unit/: test_sanity.py
tests/unit/domain/: test_basic_similarity_recommendation_service.py  test_entities.py  test_euclidean_scoring_strategy.py  test_spotify_token.py  test_track_features.py
tests/unit/domain/services/: test_weighted_scoring_strategy.py
tests/unit/domain/value_objects/: test_recommendation_score.py
